--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
     <script src="./script/script.js" defer></script>
   </head>
   <body>
+    <div class="header-message"> </div>
+    <div class="grid-wrapper">
+      <div class="grid-container">
+      
+      </div>
+    </div>
+    <div class="button-wrapper">
+      <button type="button" class="reset-button"> Reset </button>
+    </div>
   </body>
 </html>
