Rename HTML title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./style/normalize.css">
     <link rel="stylesheet" href="./style/styles.css">
-    <title> Template </title>
+    <title> Tic-Tac-Toe </title>
     <script src="./script/script.js" defer></script>
   </head>
   <body>
